<resources>
    <string name="app_name">Chess AI</string>
    <string name="copyrights">Chess AI alrights reserved 2021</string>
    <string name="endgames">Endgames</string>
    <string name="vizualization">Vizualization</string>
    <string name="visualization_desc">Improving your vision is a must for serious chess player.</string>
    <string name="endgame_desc">Proven to be the most blocking area of improvement if not improved daily</string>
    <string name="tactics">Tactics</string>
    <string name="tactics_desc">Solve tactics that raised from your own games.</string>
    <string name="openings">Openings</string>
    <string name="openings_desc">From opening ideas to mastery, every opening has a story behind it.</string>
    <string name="levels">Levels</string>
    <string name="trainings">Trainings</string>
    <string name="squares">Squares</string>
    <string name="pieces">Pieces</string>
    <string name="progress">Progress</string>
    <string name="start">Start</string>
    <string name="select_level">Select Level</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="strPemissionDenied">Permissions Required</string>
    <string name="descPermissionDenied">Requested permissions are required to perform properly!</string>
    <string name="strOk">Ok</string>
    <string name="strCancel">Cancel</string>
    <string name="strOpening">Openings</string>
    <string name="strTactics">Tactics</string>

    <string-array name="array_results">
        <item>Select Result</item>
        <item>0-0</item>
        <item>1-0</item>
        <item>0-1</item>
    </string-array>
</resources>