<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="mainActivity"
            type="app.com.chess.ai.viewmodels.MainViewmodel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".views.activities.MainActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_20sdp"
            android:padding="@dimen/_10sdp"
            app:layout_constraintBottom_toTopOf="@id/tv_copyrights"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_visualization"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:onClick="@{(view) -> mainActivity.onVisualizationClicked(view)}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/iv_visualization"
                        android:layout_width="@dimen/_90sdp"
                        android:layout_height="@dimen/_90sdp"
                        android:background="@drawable/ic_circle"
                        android:padding="@dimen/_20sdp"
                        android:src="@drawable/target"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/tv_visualization"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_visualization"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/vizualization"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_16ssp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@id/tv_visualization_desc"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/iv_visualization"
                        app:layout_constraintTop_toTopOf="@id/iv_visualization" />

                    <TextView
                        android:id="@+id/tv_visualization_desc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/visualization_desc"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_12ssp"
                        app:layout_constraintBottom_toBottomOf="@id/iv_visualization"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/iv_visualization"
                        app:layout_constraintTop_toBottomOf="@id/tv_visualization" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_endGames"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:onClick="@{(view) -> mainActivity.onVisualizationClicked(view)}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/layout_visualization"
                    app:layout_constraintTop_toBottomOf="@id/layout_visualization">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/iv_endGames"
                        android:layout_width="@dimen/_90sdp"
                        android:layout_height="@dimen/_90sdp"
                        android:background="@drawable/ic_circle"
                        android:padding="@dimen/_20sdp"
                        android:src="@drawable/endgames"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/tv_endGames"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_endGames"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/endgames"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_16ssp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@id/tv_endGames_desc"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/iv_endGames"
                        app:layout_constraintTop_toTopOf="@id/iv_endGames" />

                    <TextView
                        android:id="@+id/tv_endGames_desc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/endgame_desc"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_12ssp"
                        app:layout_constraintBottom_toBottomOf="@id/iv_endGames"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/iv_endGames"
                        app:layout_constraintTop_toBottomOf="@id/tv_endGames" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_tactics"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:onClick="@{(view) -> mainActivity.onVisualizationClicked(view)}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/layout_visualization"
                    app:layout_constraintTop_toBottomOf="@id/layout_endGames">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/iv_tactics"
                        android:layout_width="@dimen/_90sdp"
                        android:layout_height="@dimen/_90sdp"
                        android:layout_marginBottom="@dimen/_20sdp"
                        android:background="@drawable/ic_circle"
                        android:src="@drawable/tactics"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/tv_tactics"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_tactics"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/tactics"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_16ssp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@id/tv_tactics_desc"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/iv_tactics"
                        app:layout_constraintTop_toTopOf="@id/iv_tactics" />

                    <TextView
                        android:id="@+id/tv_tactics_desc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/tactics_desc"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_12ssp"
                        app:layout_constraintBottom_toBottomOf="@id/iv_tactics"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/iv_tactics"
                        app:layout_constraintTop_toBottomOf="@id/tv_tactics" />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_openings"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:onClick="@{(view) -> mainActivity.onVisualizationClicked(view)}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/layout_visualization"
                    app:layout_constraintTop_toBottomOf="@id/layout_tactics">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/iv_openings"
                        android:layout_width="@dimen/_90sdp"
                        android:layout_height="@dimen/_90sdp"
                        android:background="@drawable/ic_circle"
                        android:padding="@dimen/_20sdp"
                        android:src="@drawable/openings"
                        app:layout_constraintEnd_toStartOf="@id/tv_openings"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_openings"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/openings"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_16ssp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@id/tv_openings"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/iv_openings"
                        app:layout_constraintTop_toTopOf="@id/iv_openings" />

                    <TextView
                        android:id="@+id/tv_openings_desc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/openings_desc"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_12ssp"
                        app:layout_constraintBottom_toBottomOf="@id/iv_openings"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/iv_openings"
                        app:layout_constraintTop_toBottomOf="@id/tv_openings" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <!--<TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Hello World!"
                    android:onClick="@{(view) -> mainActivity.onVisualizationClicked(view)}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />-->
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <TextView
            android:id="@+id/tv_copyrights"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="sans-serif-thin"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/copyrights"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
