<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="optionsActivity"
            type="app.com.chess.ai.viewmodels.MainViewmodel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".activities.MainActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:padding="@dimen/_10sdp"
            app:layout_constraintBottom_toTopOf="@id/tv_copyrights"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_training"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_15sdp"
                    app:layout_constraintBottom_toTopOf="@id/layout_levels"
                    android:onClick="@{(view) -> optionsActivity.onOptionSelected(view)}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/iv_training"
                        android:layout_width="@dimen/_90sdp"
                        android:layout_height="@dimen/_90sdp"
                        android:background="@drawable/ic_circle"
                        android:padding="@dimen/_20sdp"
                        android:src="@drawable/ic_chess_training"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/tv_training"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_training"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/trainings"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_16ssp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/iv_training"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/iv_training"
                        app:layout_constraintTop_toTopOf="@id/iv_training" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_levels"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:onClick="@{(view) -> optionsActivity.onOptionSelected(view)}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/layout_training"
                    app:layout_constraintTop_toBottomOf="@id/layout_training">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/iv_levels"
                        android:layout_width="@dimen/_90sdp"
                        android:layout_height="@dimen/_90sdp"
                        android:background="@drawable/ic_circle"
                        android:padding="@dimen/_20sdp"
                        android:src="@drawable/ic_level"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/tv_levels"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_levels"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/levels"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_16ssp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/iv_levels"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/iv_levels"
                        app:layout_constraintTop_toTopOf="@id/iv_levels" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <TextView
            android:id="@+id/tv_copyrights"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="sans-serif-thin"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/copyrights"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
